# agentic-ai-scholaragent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.streamlit/: config.toml
data/calibration/: README.md  calibration_scholarships.json  source_manifest.json
data/demo/: README.md  (+2 more)
docs/: demo.md  evaluation_protocol.md  execution_traces.md  expired_handling.md
reports/: README.md  technical_report.md
scripts/: evaluate_query_rewrite.py  generate_report_figures.py  generate_report_tables.py  run_demo.sh
tests/: test_agentic_rag.py  test_bm25.py  test_calibration_dataset.py  test_calibration_evaluation.py  test_demo_corpora.py  test_demo_ui.py  test_dense_retrieval.py  test_eligibility.py  test_evaluation.py  test_exact_target_ranking.py  test_execution_traces.py  test_expired_handling.py  test_frozen_rag_settings.py  test_frozen_retrieval_settings.py  test_grounding.py  test_held_out_benchmark.py  test_held_out_dataset.py  test_held_out_rag_results.py  test_held_out_results.py  test_huggingface_deployment.py  test_hybrid_retrieval.py  test_hybrid_screening.py  test_ingestion.py  test_langgraph_foundation.py  test_official_dataset.py  test_official_evaluation.py  test_ollama_client.py  test_package.py  test_pipeline.py  test_query_rewrite_validation.py  test_rag_baseline.py  test_rag_comparison.py  test_recall5_supplement.py  test_report_artifacts.py  test_retrieval_comparison.py  test_runtime_cost_summary.py  test_schemas.py  test_scholar_graph.py  test_typo_tolerant_target.py  test_verification_ablation.py
(+89 files in other folders)
