[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scholaragent"
version = "0.1.0"
description = "Evidence-grounded Agentic RAG for scholarship discovery and eligibility verification."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tivdzua Lubem Noah" },
    { name = "Gisele Wiykiynyuy" }
]
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
