[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scholaragent"
version = "0.1.0"
description = "Evidence-grounded Agentic RAG for scholarship discovery and eligibility verification."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tivdzua Lubem Noah" },
    { name = "Gisele Wiykiynyuy" }
]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.7",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
demo = [
    "streamlit>=1.54,<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
